# rawimg

./: .gitignore  CMakeLists.txt  Makefile  project.yml
app/: RawImg-Bridging-Header.h  RawImgApp.swift
app/Models/: ImageDocument.swift
app/Utilities/: RawImgBridge.swift
app/Views/: CanvasView.swift  ContentView.swift  ImportDialog.swift  SidebarView.swift
core/: CMakeLists.txt
core/include/rawimg/: bridge.h  rawimg.h
core/src/: image.cpp  libraw_loader.cpp  main.cpp
core/tests/: test_core.cpp
include/rawimg/: rawimg.h
src/: main.cpp
